sample-apps/argocd-apps/hello-world/manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    name: hello-world
    istio-injection: enabled
