sample-apps/argocd-apps/hello-world/manifests/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    project: hello-world
    app: hello-world
    cost-center: cc-001
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: gcr.io/cloudrun/hello
        ports:
        - containerPort: 8080
