sample-apps/argocd-apps/hello-world/manifests/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    project: hello-world
    app: hello-world
    cost-center: cc-001
spec: 
  selector: 
    app: hello-world
  ports: 
  - name: http
    port: 8080
    protocol: TCP
