sample-apps/argocd-apps/hello-world/manifests/03-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: hello-world
spec: 
  gateways:
  - istio-system/ingress-gateway
  hosts: 
  - "tjhiatt.dev"
  - "timhiatt.dev"
  http:
  - match:
    - uri:
        prefix: /
    route: 
    - destination: 
        host: hello-world.hello-world.svc.cluster.local
        port: 
          number: 8080
